--- a/method_validation.Rmd
+++ b/method_validation.Rmd
@@ -94,18 +94,121 @@ qplot(x = filter(rr_comp, Sample_ID %in% common_id & Survey == "100_lakes")$dmax
 
 
 ```{r sort-df, fig.dim = c(20,10)}
+rr_comp <- readRDS("rr_comp.rds")
 rrcompsc <- subset(rr_comp, log(dmax)> 0)
+rrcompsc <- subset(rr_comp, log(hwidth)> 0)
 rrcompsc$logdmaxsc <- rrcompsc$dmax %>% log %>% scale()
+rrcompsc$loghwidthsc <- rrcompsc$hwidth %>% log %>% scale()
 rrcompsc$logtocsc <- rrcompsc$toc_2019 %>% log %>% scale()
 
 
-ggplot(rrcompsc)+geom_line(aes(x=as.factor(Sample_ID), y = logdmaxsc, col = Survey))+theme_minimal(base_size = 30)
+ggplot(rrcompsc)+geom_line(aes(x=as.factor(Sample_ID), y = logdmaxsc, col = Survey))+labs(x = "Sample ID", y = "RR, log and scaled")+theme_minimal(base_size = 30)
+ggplot(rrcompsc)+geom_line(aes(x=as.factor(Sample_ID), y = loghwidthsc, col = Survey))+labs(x = "Sample ID", y = "BdgT, log and scaled")+theme_minimal(base_size = 30)
+
+```
+
+```{r plot-rr, fig.dim = c(20,10)}
+ggplot(rrcompsc)+geom_line(aes(y=latitud, x = logdmaxsc, col = Survey, group = Sample_ID))+
+  labs(y = "Latitude", x = "RR, log and scaled")+theme_minimal(base_size = 30)+
+  theme_minimal(base_size = 30)
+
+ggplot(rrcompsc)+geom_line(aes(y=latitud, x = logdmaxsc, col = Survey, group = Sample_ID))+
+  labs(y = "Latitude", x = "RR, log and scaled")+theme_minimal(base_size = 30)+
+  theme_minimal(base_size = 30)
+
 ```
 
 ```{r mixed-model-date}
-library(lme4)
-
-
 summary(lme0  <- lmer(logdmaxsc ~ logtocsc + (1 | region2) + (1 | Sample_ID) + (1 | diff.week), data=rrcompsc))
+```
+
+```{r sd-sample}
+rrsum <- rrcompsc %>% group_by(Sample_ID,Survey) %>% summarize(rr_mean = mean(dmax), rr_sd = sd(dmax), rr_median = median(dmax), bdgt_mean = mean(hwidth), bdgt_sd = sd(hwidth), bdgt_median = median(hwidth))
+
+hist(rrsum$rr_sd)
+hist(rrsum$bdgt_sd)
+
+boxplot(rrsum$rr_sd)
+boxplot(rrsum$bdgt_sd)
+
+rrcompsum <- merge(rrcompsc, rrsum, by = c("Sample_ID", "Survey"))
+
+hist(rrcompsum$rr_sd)
+hist(log(rrcompsum$rr_sd))
+rrcompsum$logrrsdsc <- rrcompsum$rr_sd %>% log %>% scale
+summary(lme2  <- lmer(logrrsdsc ~ 1 + (1 | region2) + (1 | Who) + (1 | Sample_ID), data=rrcompsum))
+```
+
+```{r plot-sample-dmax, fig.dim = c(20,10)}
+ggplot(rrcompsum, aes(x=as.factor(Sample_ID), y = rr_mean, col = Survey))+geom_point()+
+  geom_errorbar(aes(ymin =rr_mean - rr_sd, ymax = rr_mean + rr_sd))+
+  labs(x = "Sample ID", y = "RR, log and scaled")+theme_minimal(base_size = 30)
+
+ggplot(rrcompsum, aes(x=as.factor(Sample_ID), y = bdgt_mean, col = Survey))+geom_point()+
+  geom_errorbar(aes(ymin =bdgt_mean - bdgt_sd, ymax = bdgt_mean + bdgt_sd))+
+  labs(x = "Sample ID", y = "BdgT, log and scaled")+theme_minimal(base_size = 30)
+```
+
+```{r plot-sd, fig.dim = c(10, 20)}
+ggplot(rrcompsum, aes(x = rr_mean, y = latitud, col = Survey))+
+  geom_point()+geom_errorbar(aes(xmin = rr_mean - rr_sd, xmax = rr_mean + rr_sd))+
+  labs(y = "Latitude", y = "RR, log and scaled")+theme_minimal(base_size = 30)
+
+ggplot(rrcompsum, aes(x = bdgt_mean, y = latitud, col = Survey))+
+  geom_point()+geom_errorbar(aes(xmin = bdgt_mean - bdgt_sd, xmax = bdgt_mean + bdgt_sd))+
+  labs(y = "Latitude", y = "BdgT, log and scaled")+theme_minimal(base_size = 30)
+```
+
+```{r remove-high-variability}
+rrcompr <- filter(rrcompsum, rr_sd < 5)
+
+rrcompr$logrrsc <- rrcompr$rr_mean %>% log %>% scale
+rrcompr$logbdgtsc <- rrcompr$bdgt_mean %>% log %>% scale
+
+saveRDS(rrcompr, "rrcompr.rds")
+
+summary(lm1  <- lm(logrrsc ~ logtocsc + region2, data=rrcompr))
+summary(lme1  <- lmer(logrrsc ~ logtocsc + (1 | region2) + (1 | Who), data=rrcompr))
+
+aov(logrrsc~region2, data = rrcompr)
+
+ggplot(rrcompr,aes(x = region2, y=logrrsc))+geom_boxplot(outlier.shape = NA, notch = T)+
+  geom_jitter(aes(col=region2))+ labs(x = "", y = "log.rr.sc", col = "Region")+
+  theme_minimal(base_size = 25)
+
+ggplot(rrcompr,aes(x = region2, y=logbdgtsc))+geom_boxplot(outlier.shape = NA, notch = T)+
+  geom_jitter(aes(col=region2))+ labs(x = "", y = "log.bdgt.sc", col = "Region")+
+  theme_minimal(base_size = 25)
+
+ggplot(rrcompr)+geom_point(aes(x=rr_mean, y = rr_median))
+ggplot(rrcompsum)+geom_point(aes(x=rr_mean, y = rr_median))
+
+
+```
+
+```{r epxlore-high-variability}
+rrcompr2 <- filter(rrcompsum, rr_sd > 5)
+
+rrcompr2$logrrsc <- rrcompr2$rr_mean %>% log %>% scale
+rrcompr2$logbdgtsc <- rrcompr2$bdgt_mean %>% log %>% scale
+rrcompr2$logrrsdsc <- rrcompr2$rr_sd %>% log %>% scale
+
+saveRDS(rrcompr2, "rrcompr2.rds")
+
+summary(lm3  <- lm(logrrsc ~ logtocsc + region2, data=rrcompr2))
+summary(lme3  <- lmer(logrrsc ~ logtocsc + (1 | region2) + (1 | Who), data=rrcompr2))
+
+aov(logrrsc~region2, data = rrcompr)
+
+ggplot(rrcompr,aes(x = region2, y=logrrsc))+geom_boxplot(outlier.shape = NA, notch = T)+
+  geom_jitter(aes(col=region2))+ labs(x = "", y = "log.rr.sc", col = "Region")+
+  theme_minimal(base_size = 25)
+
+ggplot(rrcompr,aes(x = region2, y=logbdgtsc))+geom_boxplot(outlier.shape = NA, notch = T)+
+  geom_jitter(aes(col=region2))+ labs(x = "", y = "log.bdgt.sc", col = "Region")+
+  theme_minimal(base_size = 25)
+
+ggplot(rrcompr)+geom_point(aes(x=rr_mean, y = rr_median))
+ggplot(rrcompsum)+geom_point(aes(x=rr_mean, y = rr_median))
 
 ```
